--- a/LightBnB_WebApp-master/sass/_property-listings.scss
+++ b/LightBnB_WebApp-master/sass/_property-listings.scss
@@ -21,6 +21,7 @@
   &__title {
     font-size: 1.0rem;
   }
+
   &__preview-image {
     overflow: hidden;
     max-width: 50%;
@@ -29,6 +30,21 @@
       height: 100%;
       padding: 0;
     }
+  }
+
+  &__footer {
+    margin-top: 1rem;
+    height: 150px;
+  }
+
+  .review_count {
+    font-weight: 700;
+    color: green;
+    transition: all 300ms ease-in-out;
+  }
+
+  .review_count:hover {
+    color: blue;
   }
 }
 
